@@ -19,7 +19,6 @@ mplane_t	frustum[4];
 int			c_brush_polys, c_alias_polys;
 
 qboolean	r_cache_thrash;			// compatability
-qboolean	envmap;				// true during envmap command capture 
 
 GLuint			currenttexture = GL_UNUSED_TEXTURE;	// to avoid unnecessary texture sets
 
@@ -1408,8 +1407,7 @@ static void R_DrawViewModel (void)
 	    (chase_active.integer) ||
 //rjr	    (cl.items & IT_INVISIBILITY) ||
 	    (!r_drawviewmodel.integer) ||
-	    (!r_drawentities.integer) ||
-	    (envmap))
+	    (!r_drawentities.integer))
 	{
 		return;
 	}
@@ -1697,12 +1695,6 @@ static void R_SetupGL (void)
 
 	w = x2 - x;
 	h = y - y2;
-
-	if (envmap)
-	{
-		x = y2 = 0;
-		w = h = 256;
-	}
 
 	glViewport_fp (glx + x, gly + y2, w, h);
 	GL_SetFrustum (r_refdef.fov_x, r_refdef.fov_y);
